# dep-crawler

./: Cargo.toml  dep-graph.dot
mock-c-project/: Makefile  README.md
mock-c-project/.dep_crawler/: minimal_index.json
mock-c-project/include/: common.h  config.h  graph.h  version.h
mock-c-project/include/model/: edge.h  node.h
mock-c-project/include/platform/: posix.h  win.h
mock-c-project/include/util/: math.h  number.h
mock-c-project/plugins/: plugin.c  plugin.h
mock-c-project/src/: graph.c  main.c  platform.c  util.c
src/: main.rs
