[package]
name = "dep-crawler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccrawl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
walkdir = "2.5.0"
